feature: integration testing diverted on example app, first data provider method implemented

--- a/acn-transactional-outbox-example-app/src/test/resources/application.yml
+++ b/acn-transactional-outbox-example-app/src/test/resources/application.yml
@@ -4,6 +4,10 @@ spring:
   application:
     name: dontcare
 
+  flyway:
+    baseline-on-migrate: true
+    baseline-version: '0'
+
 logging:
   level:
     it.gov.acn: DEBUG
