feat: outbox manager added, for the client app to register events in the outbox

--- a/acn-transactional-outbox-autoconfigure/pom.xml
+++ b/acn-transactional-outbox-autoconfigure/pom.xml
@@ -59,6 +59,17 @@
             <version>${spring.boot.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+            <optional>true</optional>
+		</dependency>
+
         <!-- Spring Data JPA for testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
