test: unit and integration for writes and transactional context when outbox manager is used

--- a/acn-transactional-outbox-example-app/src/test/resources/application.yml
+++ b/acn-transactional-outbox-example-app/src/test/resources/application.yml
@@ -3,7 +3,10 @@ spring:
     keep-alive: true
   application:
     name: dontcare
-
+  jpa:
+    hibernate:
+      generate-ddl: true
+      ddl-auto: update
   flyway:
     baseline-on-migrate: true
     baseline-version: '0'
