ci: updated gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /acn-transactional-outbox-autoconfigure.iml
 /acn-transactional-outbox-core.iml
 /acn-transactional-outbox-starter.iml
+/acn-transactional-outbox-core/acn-transactional-outbox-core.iml
