feat: actuator in example app

--- a/acn-transactional-outbox-example-app/src/main/resources/application.yml
+++ b/acn-transactional-outbox-example-app/src/main/resources/application.yml
@@ -15,6 +15,15 @@ spring:
     url: ${datasource.jdbcUrl}
     password: ${datasource.password}
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
+
 acn:
   outbox:
     scheduler:
