--- a/acn-transactional-outbox-autoconfigure/pom.xml
+++ b/acn-transactional-outbox-autoconfigure/pom.xml
@@ -32,8 +32,7 @@
         </dependency>
         <dependency>
             <groupId>io.micrometer</groupId>
-            <artifactId>micrometer-core</artifactId>
-            <optional>true</optional>
+            <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
 
         <dependency>
