fix: example app application.yml prometheus exposure

--- a/acn-transactional-outbox-example-app/src/test/resources/application.yml
+++ b/acn-transactional-outbox-example-app/src/test/resources/application.yml
@@ -24,6 +24,17 @@ spring:
     baseline-on-migrate: true
     baseline-version: '0'
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: 'prometheus,health,info'
+  prometheus:
+    metrics:
+      export:
+        enabled: true
+
 logging:
   level:
     it.gov.acn: DEBUG
+
