--- a/acn-transactional-outbox-example-app/src/main/resources/application.yml
+++ b/acn-transactional-outbox-example-app/src/main/resources/application.yml
@@ -19,10 +19,11 @@ management:
   endpoints:
     web:
       exposure:
-        include: "*"
-  endpoint:
-    health:
-      show-details: always
+        include: 'prometheus,health,info'
+  prometheus:
+    metrics:
+      export:
+        enabled: true
 
 acn:
   outbox:
